--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 .env.production
 .phpactor.json
 .phpunit.result.cache
+/categories/
+/logo/
+/shoes/
+/laravel-sukasukastores/
 /.fleet
 /.idea
 /.nova
